--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
         <img src="images/profile.jpg" alt="My name is KALUNGI ISAAC" width="200" height="220">
         <p>My name is KALUNGI ISAAC, a student at Brigham Young University Idaho,pursuing a degree in Web design  and <br>I am passionate about creating innovative web solutions that enhance user experience and drive engagement. <br>With a strong foundation in HTML, CSS, AND JAVASCRIPT, I am eager to apply my skills to real_world projects and <br> contribute to the ever_evolving field of  web development </p>
     </main>
+    <br>
     <aside>
         <h2>MY STATE KAMPALA UGANDA</h2>
-        <img src="images/KAMPALA.png" alt=""widith = 200 height = auto>
+        <img src="images/image copy.png" alt=""width = 200 height = auto>
         <p>My country Uganda the pearl of africa with every thing treasured in this world, <br>Uganda is gifted with good nature where the sun shines while its raining making the soil more fertile than any other country in africa,<br> Ugandan people are very beutiful and handsome peole who welcome each and every one to the gifted perl of africa Uganda.</p>
     </aside> 
     <footer>      
-        <P> &COPY;2025🌴Kalungi Isaac 🌴 kampala, Uganda</P>
+        <P> &COPY;2025<br>🌴Kalungi Isaac <br>🌴 kampala, Uganda</P>
     </footer>
     
 </body>
