--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <br>
     <aside>
         <h2>MY STATE KAMPALA UGANDA</h2>
-        <img src="images/uganda.png" alt="uganda" width = "200" height = "auto">
+        <img src="images/uganda.png" alt="uganda" width = "200">
         <p>My country Uganda the pearl of africa with every thing treasured in this world, <br>Uganda is gifted with good nature where the sun shines while its raining making the soil more fertile than any other country in africa,<br> Ugandan people are very beutiful and handsome peole who welcome each and every one to the gifted perl of africa Uganda.</p>
     </aside> 
     <footer>      
