--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Kalungi Isaac">
 
     <title>Kalungi Isaac | WDD130</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/fela.css">
 </head>
 <body>
     <header>
@@ -26,17 +26,18 @@
             With a strong foundation in HTML, CSS, and JavaScript, I am eager to apply my skills to real-world projects 
             and contribute to the ever-evolving field of web development.</p>
     </main>
-    
+    <audio src=""></audio>  
     <aside>
         <h2>My State: Kampala Uganda</h2>
-        <img src="images/uganda.png" alt="Map of Uganda" width="200">
+        <img src="/images/2504957.png" alt="Map of Uganda" width="200">
         <p>My country, Uganda—the Pearl of Africa—is treasured for its natural beauty. 
             Uganda is blessed with fertile land, where the sun can shine while it's raining, enriching the soil.
             The Ugandan people are beautiful and welcoming, inviting everyone to experience the unique charm of our country.</p>
     </aside> 
     
     <footer>
-        <p>&copy; 2025<br>🌴 Kalungi Isaac<br>🌴 Kampala, Uganda</p>
+        <p>&copy; 2025<br>🌴 Kalungi Isaac<br>🌴 Kampala, Uganda <br> &Cconint;izokal91@gmail.com
+        </p>
     </footer>
 </body>
 </html>
