--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us | White Water Rafting Co.</title>
-    <link rel="stylesheet" href="/styles/rafting.css">
+    <link rel="stylesheet" href="/wwr/style/rafting.css">
 </head>
 <body>
     <header>
