--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us | White Water Rafting Co.</title>
-    <link rel="stylesheet" href="/wwr/style/rafting.css">
+    <link rel="stylesheet" href="wwr/style/rafting.css">
 </head>
 <body>
     <header>
-        <img src="/wwr/images/logo.png" alt="Rafting Site Logo" style="height: 150px;">
+        <img src="wwr/images/logo.png" alt="Rafting Site Logo" style="height: 150px;">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html" class="active">About Us</a>
@@ -18,7 +18,7 @@
     </header>
     <main>
         <section class="hero">
-            <img src="/wwr/images/rafting-hero.png" alt="Rafting Adventure">
+            <img src="wwr/images/rafting-hero.png" alt="Rafting Adventure">
             <h1> Kal White Water Rafting Company</h1>
         </section>
         <section class="history">
@@ -34,11 +34,11 @@
             <h2>Adventure Awaits You</h2>
             <div class="features">
                 <figure>
-                    <img src="/wwr/images/safety-icon.png" alt="Safety First" style="height:auto" widith ="400px;">
+                    <img src="wwr/images/safety-icon.png" alt="Safety First" style="height:auto" widith ="400px;">
                     <figcaption>Certified Guides</figcaption>
                 </figure>
                 <figure>
-                    <img src="/wwr/images/image copy.png" alt="Epic Rapids" style="height:75px," width ="250px;">
+                    <img src="wwr/images/image copy.png" alt="Epic Rapids" style="height:75px," width ="250px;">
                     <figcaption>Epic Rapids</figcaption>
                 </figure>
                 
@@ -50,13 +50,13 @@
         <p>©2024 | White Water Rafting Company | KALUNGI ISAAC</p>
         <nav class="socialmedia">
             <a href="https://www.facebook.com/kalungi256256" target="_blank">
-                <img src="/wwr/images/1_Facebook2_colored_svg-128.webp" alt="Facebook" style="height:24px;vertical-align:middle;"> Facebook
+                <img src="wwr/images/1_Facebook2_colored_svg-128.webp" alt="Facebook" style="height:24px;vertical-align:middle;"> Facebook
             </a>
             <a href="https://www.instagram.com/kalungi256256" target="_blank">
-                <img src="/wwr/images/2504957.png" alt="Instagram" style="height:24px;-ms-text-combine-horizontal:middle;"> Instagram
+                <img src="wwr/images/2504957.png" alt="Instagram" style="height:24px;-ms-text-combine-horizontal:middle;"> Instagram
             </a>
             <a href="https://www.twitter.com/kalungi256256" target="_blank">
-                <img src="/wwr/images/Facebook_Messenger-128.webp" alt="Messenger" style="height:24px;vertical-align:middle;"> Messenger
+                <img src="wwr/images/Facebook_Messenger-128.webp" alt="Messenger" style="height:24px;vertical-align:middle;"> Messenger
             </a>
         </nav>
     </footer>
