--- a/wwr/about.html
+++ b/wwr/about.html
@@ -34,11 +34,11 @@
             <h2>Adventure Awaits You</h2>
             <div class="features">
                 <figure>
-                    <img src="images/safety-icon.png" alt="Safety First" style="height:auto" widith ="400px;">
+                    <img src="images/safety-icon.png" alt="Safety First" style="height:auto;">
                     <figcaption>Certified Guides</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/image copy.png" alt="Epic Rapids" style="height:75px," width ="250px;">
+                    <img src="images/image copy.png" alt="Epic Rapids" style="height:auto;">
                     <figcaption>Epic Rapids</figcaption>
                 </figure>
                 
