--- a/wwr/about.html
+++ b/wwr/about.html
@@ -38,7 +38,7 @@
                     <figcaption>Certified Guides</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/image copy.png" alt="Epic Rapids" style="height:auto;">
+                    <img src="images/image23.png" alt="Epic Rapids" style="height:auto;">
                     <figcaption>Epic Rapids</figcaption>
                 </figure>
                 
