--- a/wwr/about.html
+++ b/wwr/about.html
@@ -47,10 +47,10 @@
                 Epic Rapids
                 <figure class="ges">
                     <img src="images/image23.png" alt="Epic Rapids" style="height:auto;">
-                    <img src="images/WhatsApp Image 2025-07-23 at 12.52.17_ce69261e.jpg" alt="">
-                    <img src="images/WhatsApp Image 2025-07-23 at 12.52.18_11395f3c.jpg" alt="">
-                    <img src="images/WhatsApp Image 2025-07-23 at 12.52.19_1d393854.jpg" alt="">
-                    <img src="images/hand up.jpg" alt="">
+                    <img src="images/image1.jpg" alt="rafting">
+                    <img src="images/image2.jpg" alt="rafting">
+                    <img src="images/image3.jpg" alt="rafting">
+                    <img src="images/image4.jpg" alt="rafting">
             
                 </figure>
                 
