--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="Rafting Company logo">
+        <img src="/images/logo.png" alt="Rafting Company logo">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
@@ -32,7 +32,7 @@
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam itaque distinctio, et, minus sed ea optio debitis, fuga delectus dignissimos ab voluptates libero eaque vel! Nihil aspernatur tempora error voluptatem. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error minima, maiores consectetur assumenda numquam corporis velit non tempore quibusdam expedita quod fugiat impedit dolores sapiente, eos vero et ut vitae.</p>
                 </div>
                 <div class="image-clip">
-                    <img src="images/image4.jpg" alt="happy clients">
+                    <img src="/images/image4.jpg" alt="happy clients">
                 </div>
             </div>
         </article>
