--- a/wwr/about.html
+++ b/wwr/about.html
@@ -67,7 +67,7 @@
             <h2>Adventure Awaits You!</h2>
             <div class="image">
                 <figure>
-                    <img src="images/image1.jpg" alt="clients image1">
+                    <img src="/images/" alt="clients image1">
                     <figcaption>Jinja Water Rafting</figcaption>
                 </figure>
                 <figure>
@@ -94,13 +94,13 @@
 
         <nav class="socialmedia">
             <a href="http://facebook.com">
-                <img src="images/Facebook.webp" alt="facebook logo">facebook
+                <img src="facebook.webp" alt="facebook logo">facebook
             </a>
             <a href="http://WhatsApp.com">
                 <img src="images/2504957.png" alt="WhatsApp logo">WhatsApp
             </a>
             <a href="http://Facebookmessenger.com">
-                <img src="images/messenger.png" alt="Messenger logo">Messenger
+                <img src="messenger.png" alt="Messenger logo">Messenger
             </a>
         </nav>
         <div class="par-footer">
