Fix image paths in about.html and update background image URL in rafting.css for consistency

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -75,11 +75,11 @@
                     <figcaption>marchision Water Rafting</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/image3.jpg" alt="clients image3">
+                    <img src="./images/image3.jpg" alt="clients image3">
                     <figcaption> Nile Water Rafting</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/image4.jpg" alt="clients image4">
+                    <img src="./images/image4.jpg" alt="clients image4">
                     <figcaption> albert White Water Rafting</figcaption>
                 </figure>
                 <figure>
