Update image paths in about.html for consistency and correct relative references

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -51,7 +51,7 @@
                         rivers.</p>
                 </div>
                 <div class="history-image">
-                    <img src="images/image4.jpg" alt="History image">
+                    <img src="../images/image4.jpg" alt="History image">
                 </div>
                 <div class="history-text">
                     <p>Over the years, we have grown from a small group of enthusiasts into a leading rafting company,
@@ -67,23 +67,23 @@
             <h2>Adventure Awaits You!</h2>
             <div class="image">
                 <figure>
-                    <img src="/images/" alt="clients image1">
+                    <img src="../images/image1.jpg" alt="clients image1">
                     <figcaption>Jinja Water Rafting</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/image2.jpg" alt="clients image2">
+                    <img src="../images/image2.jpg" alt="clients image2">
                     <figcaption>marchision Water Rafting</figcaption>
                 </figure>
                 <figure>
-                    <img src="./images/image3.jpg" alt="clients image3">
+                    <img src="../images/image3.jpg" alt="clients image3">
                     <figcaption> Nile Water Rafting</figcaption>
                 </figure>
                 <figure>
-                    <img src="./images/image4.jpg" alt="clients image4">
+                    <img src="../images/image4.jpg" alt="clients image4">
                     <figcaption> albert White Water Rafting</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/safety-icon.png" alt="clients image5">
+                    <img src="../images/safety-icon.png" alt="clients image5">
                     <figcaption>safe guides</figcaption>
                 </figure>
             </div>
@@ -94,13 +94,13 @@
 
         <nav class="socialmedia">
             <a href="http://facebook.com">
-                <img src="facebook.webp" alt="facebook logo">facebook
+                <img src="../images/facebook.webp" alt="facebook logo">
             </a>
             <a href="http://WhatsApp.com">
-                <img src="images/2504957.png" alt="WhatsApp logo">WhatsApp
+                <img src="../images/2504957.png" alt="WhatsApp logo">
             </a>
             <a href="http://Facebookmessenger.com">
-                <img src="messenger.png" alt="Messenger logo">Messenger
+                <img src="../images/messenger.png" alt="Messenger logo">
             </a>
         </nav>
         <div class="par-footer">
