Refactor code structure for improved readability and maintainability

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <img src="/images/logo.png" alt="Rafting Company logo">
+        <img src="../images/logo.png" alt="Rafting Company logo">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
@@ -68,23 +68,23 @@
             <div class="image">
                 <figure>
                     <img src="../images/image1.jpg" alt="clients image1">
-                    <figcaption>Jinja Water Rafting</figcaption>
+                    <figcaption>"Experience the thrill of the rapids."</figcaption>
                 </figure>
                 <figure>
                     <img src="../images/image2.jpg" alt="clients image2">
-                    <figcaption>marchision Water Rafting</figcaption>
+                    <figcaption>"Discover nature's beauty up close."</figcaption>
                 </figure>
                 <figure>
                     <img src="../images/image3.jpg" alt="clients image3">
-                    <figcaption> Nile Water Rafting</figcaption>
+                    <figcaption>"Unforgettable moments await."</figcaption>
                 </figure>
                 <figure>
                     <img src="../images/image4.jpg" alt="clients image4">
-                    <figcaption> albert White Water Rafting</figcaption>
+                    <figcaption>"Adventure tailored for you."</figcaption>
                 </figure>
                 <figure>
-                    <img src="../images/safety-icon.png" alt="clients image5">
-                    <figcaption>safe guides</figcaption>
+                    <img src="../images/happy client.png" alt="clients image5">
+                    <figcaption>"Smiles that last a lifetime."</figcaption>
                 </figure>
             </div>
 
