--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <img src="../images/logo.png" alt="Rafting Company logo">
+        <img src="/images/logo.png" alt="Rafting Company logo">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
