--- a/wwr/about.html
+++ b/wwr/about.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <img src="/images/logo.png" alt="Rafting Company logo">
+        <img src="../images/logo.png" alt="Rafting Company logo">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About Us</a>
@@ -23,7 +23,7 @@
 
     </header>
     <main>
-        <article class="about-article" style="background-image: url('/wwr/images/rafting-hero.png'); background-size: cover; background-position: center;">
+        <article class="about-article" style="background-image: url('../images/rafting-hero.png'); background-size: cover; background-position: center;">
             <div class="text">
                 <h1>White Water Rafting</h1>
             </div>
