--- a/wwr/about.html
+++ b/wwr/about.html
@@ -29,10 +29,12 @@
             </div>
             <div class="main-body">
                 <div class="paragh">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquam itaque distinctio, et, minus sed ea optio debitis, fuga delectus dignissimos ab voluptates libero eaque vel! Nihil aspernatur tempora error voluptatem. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error minima, maiores consectetur assumenda numquam corporis velit non tempore quibusdam expedita quod fugiat impedit dolores sapiente, eos vero et ut vitae.</p>
+                    <p>
+                        Deep in the heart of Uganda, where the Nile roars with wild pride, a fearless company called KAL White Water Rafting was born. Started by three childhood friends with nothing but a raft and a dream, KAL quickly became legendary for its thrilling rides and unmatched safety. Tourists from around the world came to conquer the Kalagala Rapids, but stayed for the laughter, campfire tales, and the spirit of adventure that KAL inspired. Every ride wasn’t just a journey down the river — it was a story of courage, teamwork, and unforgettable memories written on the waves.
+                    </p>
                 </div>
                 <div class="image-clip">
-                    <img src="/images/image4.jpg" alt="happy clients">
+                    <img src="../images/image4.jpg" alt="happy clients">
                 </div>
             </div>
         </article>
@@ -72,15 +74,15 @@
                 </figure>
                 <figure>
                     <img src="../images/image2.jpg" alt="clients image2">
-                    <figcaption>"Discover nature's beauty up close."</figcaption>
+                    <figcaption>Kayanja Rapids"Discover nature's beauty up close."</figcaption>
                 </figure>
                 <figure>
                     <img src="../images/image3.jpg" alt="clients image3">
-                    <figcaption>"Unforgettable moments await."</figcaption>
+                    <figcaption>Albert Nile"Unforgettable moments await."</figcaption>
                 </figure>
                 <figure>
                     <img src="../images/image4.jpg" alt="clients image4">
-                    <figcaption>"Adventure tailored for you."</figcaption>
+                    <figcaption>Murchison Falls"Adventure tailored for you."</figcaption>
                 </figure>
                 <figure>
                     <img src="../images/happy client.png" alt="clients image5">
