--- a/wwr/about.html
+++ b/wwr/about.html
@@ -77,7 +77,7 @@
                     <figcaption>Kayanja Rapids"Discover nature's beauty up close."</figcaption>
                 </figure>
                 <figure>
-                    <img src="../images/Image20.jpg" alt="clients image3">
+                    <img src="../images/image20.jpg" alt="clients image3">
                     <figcaption>Albert Nile"Unforgettable moments await."</figcaption>
                 </figure>
                 <figure>
