--- a/wwr/about.html
+++ b/wwr/about.html
@@ -15,10 +15,10 @@
     <header>
         <img src="../images/logo.png" alt="Rafting Company logo">
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact Us</a>
+            <a href="index.html">🏠Home</a>
+            <a href="about.html">🌐About Us</a>
+            <a href="trips.html">🐬Trips</a>
+            <a href="contact.html">📞Contact Us</a>
         </nav>
 
     </header>
@@ -70,23 +70,23 @@
             <div class="image">
                 <figure>
                     <img src="../images/image1.jpg" alt="clients image1">
-                    <figcaption>"Experience the thrill of the rapids."</figcaption>
+                    <figcaption>Experience the thrill of the rapids.</figcaption>
                 </figure>
                 <figure>
                     <img src="../images/image2.jpg" alt="clients image2">
-                    <figcaption>Kayanja Rapids"Discover nature's beauty up close."</figcaption>
+                    <figcaption>Discover nature's beauty.</figcaption>
                 </figure>
                 <figure>
                     <img src="../images/image20.jpg" alt="clients image3">
-                    <figcaption>Albert Nile"Unforgettable moments await."</figcaption>
+                    <figcaption>Unforgettable moments await.</figcaption>
                 </figure>
                 <figure>
                     <img src="../images/image4.jpg" alt="clients image4">
-                    <figcaption>Murchison Falls"Adventure tailored for you."</figcaption>
+                    <figcaption>Adventure tailored for you.</figcaption>
                 </figure>
                 <figure>
                     <img src="../images/happyclient.png" alt="clients image5">
-                    <figcaption>"Smiles that last a lifetime."</figcaption>
+                    <figcaption>Smiles that last a lifetime.</figcaption>
                 </figure>
             </div>
 
