--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <meta name="author" content="Kalungi Isaac">
 
     <title>Kalungi Isaac | WDD130</title>
-    <link rel="stylesheet" href="styles/fela.css">
+    <link rel="stylesheet" href="wwr/style/style.css">
 </head>
 <body>
     <header>
         <nav>
             <a href="https://github.com/kalungi256256/wdd130">Home</a>
-            <a href="https://wwr">Rafting Website</a>
+            <a href="https://kalungi256256.github.io/wdd130/wwr/about.html">KAL Rafting Site</a>
         </nav>
     </header>
     
