--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </main>  
     <aside>
         <h2>My State: Kampala Uganda</h2>
-        <img src="../images/uganda.png" alt="Map of Uganda" width="200">
+        <img src="images/uganda.png" alt="Map of Uganda" width="200">
         <p>My country, Uganda—the Pearl of Africa—is treasured for its natural beauty. 
             Uganda is blessed with fertile land, where the sun can shine while it's raining, enriching the soil.
             The Ugandan people are beautiful and welcoming, inviting everyone to experience the unique charm of our country.</p>
