--- a/wwr/about.html
+++ b/wwr/about.html
@@ -9,11 +9,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>About Us | Kal White Water Rafting Company.</title>
-    <link rel="stylesheet" href="style/rafting.css">
+    <link rel="stylesheet" href="../wwr/styles/rafting.css">
 </head>
 <body>
     <header>
-        <img src="../images/logo.png" alt="Rafting Company logo">
+        <img src="../wwr/images/logo.png" alt="Rafting Company logo">
         <nav>
             <a href="index.html">🏠Home</a>
             <a href="about.html">🌐About Us</a>
@@ -23,7 +23,7 @@
 
     </header>
     <main>
-        <article class="about-article" style="background-image: url('../images/rafting-hero.png'); background-size: cover; background-position: center;">
+        <article class="about-article">
             <div class="text">
                 <h1>White Water Rafting</h1>
             </div>
@@ -34,7 +34,7 @@
                     </p>
                 </div>
                 <div class="image-clip">
-                    <img src="../images/image4.jpg" alt="happy clients">
+                    <img src="../wwr/images/image4.jpg" alt="happy clients">
                 </div>
             </div>
         </article>
@@ -53,7 +53,7 @@
                         rivers.</p>
                 </div>
                 <div class="history-image">
-                    <img src="../images/image4.jpg" alt="History image">
+                    <img src="../wwr/images/image4.jpg" alt="History image">
                 </div>
                 <div class="history-text">
                     <p>Over the years, we have grown from a small group of enthusiasts into a leading rafting company,
@@ -69,23 +69,23 @@
             <h2>Adventure Awaits You!</h2>
             <div class="image">
                 <figure>
-                    <img src="../images/image1.jpg" alt="clients image1">
+                    <img src="../wwr/images/image1.jpg" alt="clients image1">
                     <figcaption>Experience the thrill of the rapids.</figcaption>
                 </figure>
                 <figure>
-                    <img src="../images/image2.jpg" alt="clients image2">
+                    <img src="../wwr/images/image2.jpg" alt="clients image2">
                     <figcaption>Discover nature's beauty.</figcaption>
                 </figure>
                 <figure>
-                    <img src="../images/image20.jpg" alt="clients image3">
+                    <img src="../wwr/images/image20.jpg" alt="clients image3">
                     <figcaption>Unforgettable moments await.</figcaption>
                 </figure>
                 <figure>
-                    <img src="../images/image4.jpg" alt="clients image4">
+                    <img src="../wwr/images/image4.jpg" alt="clients image4">
                     <figcaption>Adventure tailored for you.</figcaption>
                 </figure>
                 <figure>
-                    <img src="../images/happyclient.png" alt="clients image5">
+                    <img src="../wwr/images/happyclient.png" alt="clients image5">
                     <figcaption>Smiles that last a lifetime.</figcaption>
                 </figure>
             </div>
@@ -96,13 +96,13 @@
 
         <nav class="socialmedia">
             <a href="http://facebook.com">
-                <img src="../images/facebook.webp" alt="facebook logo">
+                <img src="../wwr/images/facebook.webp" alt="facebook logo">
             </a>
             <a href="http://WhatsApp.com">
-                <img src="../images/2504957.png" alt="WhatsApp logo">
+                <img src="../wwr/images/2504957.png" alt="WhatsApp logo">
             </a>
             <a href="http://Facebookmessenger.com">
-                <img src="../images/messenger.png" alt="Messenger logo">
+                <img src="../wwr/images/messenger.png" alt="Messenger logo">
             </a>
         </nav>
         <div class="par-footer">
