--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -7,8 +7,8 @@
     <meta name="description" content="Learn more about Kal White Water Rafting Company, our history, and thrilling rafting adventures.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <title>About Us | Kal White Water Rafting Company.</title>
-    <link rel="stylesheet" href="../wwr/styles/rafting.css">
+    <title> 📞Contact|Kalungi Isaac.</title>
+    <link rel="stylesheet" href="../wwr/styles/conatct.css">
 </head>
 <body>
     <header>
@@ -88,12 +88,16 @@
                     <figcaption>Smiles that last a lifetime.</figcaption>
                 </figure>
             </div>
+            <div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d348597.2472996053!2d32.38590532386827!3d0.3355967514808577!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sug!4v1753777982715!5m2!1sen!2sug" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
 
         </section>
     </main>
     <footer>
 
         <nav class="socialmedia">
+            <div class="pics">
             <a href="http://facebook.com">
                 <img src="../wwr/images/facebook.webp" alt="facebook logo">
             </a>
@@ -103,6 +107,7 @@
             <a href="http://Facebookmessenger.com">
                 <img src="../wwr/images/messenger.png" alt="Messenger logo">
             </a>
+            </div>
         </nav>
         <div class="par-footer">
             <p>&copy;2020 kal White Water Rafting Team Uganda | Kalungi Isaac</p>
