--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,105 +3,163 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Kalungi Isaac">
-    <meta name="description" content="Learn more about Kal White Water Rafting Company, our history, and thrilling rafting adventures.">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <title> 📞Contact|Kalungi Isaac.</title>
+    <title>Contact Whitewater Rafting Adventures - Get in Touch Today</title>
+    <meta name="description" content="Contact Whitewater Rafting Adventures for reservations, trip questions, and general inquiries. Find our address, phone numbers, email, and send us a message about your next adventure.">
     <link rel="stylesheet" href="../wwr/styles/conatct.css">
 </head>
 <body>
     <header>
-        <img src="../wwr/images/logo.png" alt="Rafting Company logo">
-        <nav>
-            <a href="index.html">🏠Home</a>
-            <a href="about.html">🌐About Us</a>
-            <a href="trips.html">🐬Trips</a>
-            <a href="contact.html">📞Contact Us</a>
+        <img src="../wwr/images/logo.png" alt="company logo">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="trips.html">Trips</a></li>
+                <li><a href="contact.html" class="active">Contact</a></li>
+            </ul>
         </nav>
-
     </header>
-    <main>
-        <article class="about-article">
-            <div class="text">
-                <h1>White Water Rafting</h1>
-            </div>
-            <div class="main-body">
-                <div class="paragh">
-                    <p>
-                        Deep in the heart of Uganda, where the Nile roars with wild pride, a fearless company called KAL White Water Rafting was born. Started by three childhood friends with nothing but a raft and a dream, KAL quickly became legendary for its thrilling rides and unmatched safety. Tourists from around the world came to conquer the Kalagala Rapids, but stayed for the laughter, campfire tales, and the spirit of adventure that KAL inspired. Every ride wasn’t just a journey down the river — it was a story of courage, teamwork, and unforgettable memories written on the waves.
-                    </p>
-                </div>
-                <div class="image-clip">
-                    <img src="../wwr/images/image4.jpg" alt="happy clients">
-                </div>
-            </div>
-        </article>
 
-        <section class="history-section">
-            <h2>History</h2>
-            <div class="history-columns">
-                <div class="history-text">
+    <main>
+        <section class="hero-contact">
+            <h1>Contact Us</h1>
+            <p>Ready for your next adventure? Get in touch with our team!</p>
+        </section>
+
+        <section class="contact-info">
+            <div class="company-details">
+                <h2>Company Information</h2>
+                <div class="contact-grid">
+                    <div class="contact-item">
+                        <h3>Address</h3>
+                        <p>1234 Rapids Drive<br>
+                        Adventure Valley, CO.555-23<br>
+                        KAMPALA UGANDA</p>
+                    </div>
+                    <div class="contact-item">
+                        <h3>Phone Numbers</h3>
+                        <p><strong>Reservations:</strong> (+256) 724-654<br>
+                        <strong>General Info:</strong> (+256) 766-7898<br>
+                        <strong>Emergency:</strong> (+256)-742-725522</p>
+                    </div>
+                    <div class="contact-item">
+                        <h3>✉️ Email</h3>
+                        <p><strong>General:</strong> info@ kalwhitewaterrafting.com<br>
+                        <strong>Reservations:</strong>kalreservations@whitewaterrafting.com<br>
+                        <strong>Support:</strong> support@kalwhitewaterrafting.com</p>
+                    </div>
                 </div>
-                <div class="history-image">
-                    <img src="../wwr/images/image4.jpg" alt="History image">
-                </div>
-                <div class="history-text">
-                    
-                </div>
+            </div>
+
+            <div class="map-container">
+                <h3>Locate us</h3>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d127672.57402483073!2d32.47083654402066!3d0.28793835456594236!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sug!4v1753886482561!5m2!1sen!2sug"></iframe>
+                </iframe>
             </div>
         </section>
-        <section class="Awaits">
-            <h2>Adventure Awaits You!</h2>
-            <div class="image">
-                <figure>
-                    <img src="../wwr/images/image1.jpg" alt="clients image1">
-                    <figcaption>Experience the thrill of the rapids.</figcaption>
-                </figure>
-                <figure>
-                    <img src="../wwr/images/image2.jpg" alt="clients image2">
-                    <figcaption>Discover nature's beauty.</figcaption>
-                </figure>
-                <figure>
-                    <img src="../wwr/images/image20.jpg" alt="clients image3">
-                    <figcaption>Unforgettable moments await.</figcaption>
-                </figure>
-                <figure>
-                    <img src="../wwr/images/image4.jpg" alt="clients image4">
-                    <figcaption>Adventure tailored for you.</figcaption>
-                </figure>
-                <figure>
-                    <img src="../wwr/images/happyclient.png" alt="clients image5">
-                    <figcaption>Smiles that last a lifetime.</figcaption>
-                </figure>
-            </div>
-            <div>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d348597.2472996053!2d32.38590532386827!3d0.3355967514808577!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sug!4v1753777982715!5m2!1sen!2sug" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
 
+        <section class="team-section">
+            <h2>Meet Our Team</h2>
+            <div class="employee-grid">
+                <figure class="employee">
+                    <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=200&h=200&fit=crop&crop=face" alt="Sarah Johnson, Lead Guide" width="200" height="200">
+                    <figcaption>
+                        <strong>Kalungi Isaac</strong><br>
+                        Lead Guide & Safety Coordinator<br>
+                        <em>"Safety first, fun always!"</em>
+                    </figcaption>
+                </figure>
+                <figure class="employee">
+                    <img src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=200&h=200&fit=crop&crop=face" alt="Mike Rodriguez, Senior Guide" width="200" height="200">
+                    <figcaption>
+                        <strong>Mubala Philp</strong><br>
+                        Senior Guide & Equipment Manager<br>
+                        <em>"Every rapids tells a story!"</em>
+                    </figcaption>
+                </figure>
+                <figure class="employee">
+                    <img src="/wwr/images/renah.png" alt="Renah manager">
+                    <figcaption>
+                        <strong>Renah Khan</strong><br>
+                        Customer Service Manager<br>
+                        <em>"Your adventure starts with us!"</em>
+                    </figcaption>
+                </figure>
+            </div>
+        </section>
+
+        <section class="contact-form-section">
+            <h2>Send Us a Message</h2>
+            <form class="contact-form">
+                <div class="form-group">
+                    <label for="user-name">Your Name:</label>
+                    <input type="text" id="user-name" name="user-name" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="user-email">Your Email:</label>
+                    <input type="email" id="user-email" name="user-email" required>
+                </div>
+
+                <div class="form-group">
+                    <fieldset>
+                        <legend>Purpose of Message:</legend>
+                        <div class="radio-group">
+                            <input type="radio" id="general" name="purpose" value="general" required>
+                            <label for="general">General Inquiry</label>
+                        </div>
+                        <div class="radio-group">
+                            <input type="radio" id="reservation" name="purpose" value="reservation" required>
+                            <label for="reservation">Reservation Question</label>
+                        </div>
+                        <div class="radio-group">
+                            <input type="radio" id="website" name="purpose" value="website" required>
+                            <label for="website">Website Suggestion</label>
+                        </div>
+                    </fieldset>
+                </div>
+
+                <div class="form-group">
+                    <label for="message">Your Message:</label>
+                    <textarea id="message" name="message" rows="6" required></textarea>
+                </div>
+
+                <div class="form-group checkbox-group">
+                    <input type="checkbox" id="newsletter" name="newsletter">
+                    <label for="newsletter">Please subscribe me to the monthly newsletter</label>
+                </div>
+
+                <div class="form-group">
+                    <button type="submit" class="submit-btn">Send Your Adventure Inquiry</button>
+                </div>
+            </form>
         </section>
     </main>
-    <footer>
 
-        <nav class="socialmedia">
-            <div class="pics">
-            <a href="http://facebook.com">
-                <img src="../wwr/images/facebook.webp" alt="facebook logo">
-            </a>
-            <a href="http://WhatsApp.com">
-                <img src="../wwr/images/2504957.png" alt="WhatsApp logo">
-            </a>
-            <a href="http://Facebookmessenger.com">
-                <img src="../wwr/images/messenger.png" alt="Messenger logo">
-            </a>
+    <footer>
+        <div class="footer-content">
+            <div class="footer-left">
+                <p>&copy; 2020 kal Whitewater Rafting Adventures. All rights reserved.</p>
+                <p><a href="contact-wireframe.png" target="_blank" rel="noopener">Contact Us</a></p>
             </div>
-        </nav>
-        <div class="par-footer">
-            <p>&copy;2020 kal White Water Rafting Team Uganda | Kalungi Isaac</p>
+            <div class="social-icons">
+                <a href="#" aria-label="Visit our Facebook page" class="social-icon facebook">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"/>
+                    </svg>
+                </a>
+                <a href="#" aria-label="Contact us on WhatsApp" class="social-icon whatsapp">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893A11.821 11.821 0 0020.525 3.488"/>
+                    </svg>
+                </a>
+                <a href="#" aria-label="Message us on Messenger" class="social-icon messenger">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M12 0C5.373 0 0 4.975 0 11.111c0 3.497 1.745 6.616 4.472 8.652V24l4.086-2.242c1.09.301 2.246.464 3.442.464 6.627 0 12-4.974 12-11.111C24 4.975 18.627 0 12 0zm1.191 14.963l-3.055-3.26-5.963 3.26L10.732 8.1l3.13 3.26L19.752 8.1l-6.561 6.863z"/>
+                    </svg>
+                </a>
+            </div>
+
         </div>
     </footer>
-
-
-
 </body>
 </html>
