--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -61,7 +61,7 @@
             <h2>Meet Our Team</h2>
             <div class="employee-grid">
                 <figure class="employee">
-                    <img src="/wwr/images/CEO Francis.jpg" alt="Sarah Johnson, Lead Guide" width="200" height="200">
+                    <img src="../wwr/images/CEO Francis.jpg" alt="Sarah Johnson, Lead Guide" width="200" height="200">
                     <figcaption>
                         <strong>Mr, Frank</strong><br>
                         Lead Guide & Safety Coordinator<br>
@@ -69,7 +69,7 @@
                     </figcaption>
                 </figure>
                 <figure class="employee">
-                    <img src="/wwr/images/kalungi.jpg" alt="Kalungi Isaac, Senior Guide" width="200" height="200">
+                    <img src="../wwr/images/kalungi.jpg" alt="Kalungi Isaac, Senior Guide" width="200" height="200">
                     <figcaption>
                         <strong>Kalungi Isaac</strong><br>
                         Senior Guide & Equipment Manager<br>
@@ -77,7 +77,7 @@
                     </figcaption>
                 </figure>
                 <figure class="employee">
-                    <img src="/wwr/images/renah khan.png" alt="Renah manager">
+                    <img src="../wwr/images/renah khan.png" alt="Renah manager">
                     <figcaption>
                         <strong>Renah Khan</strong><br>
                         Customer Service Manager<br>
@@ -143,18 +143,18 @@
             <div class="social-icons">
                 <div class="facebook">
                     <a href="facebook.com" aria-label="Visit our Facebook page" class="social-icon facebook">
-                        <img src="/wwr/images/facebook.webp" alt="facebook">
+                        <img src="../wwr/images/facebook.webp" alt="facebook">
                     </a>
                 </div>
                 <div class="whatsapp">
                      <a href="whatsApp.com" aria-label="Contact us on WhatsApp" class="social-icon whatsapp">
-                     <img src="/wwr/images/2504957.png" alt="whatsApp">
+                     <img src="../wwr/images/2504957.png" alt="whatsApp">
                 </a>
                      
                 </div>
                 <div class="messenger">
                     <a href="messenger.com" aria-label="Message us on Messenger" class="social-icon messenger">
-                    <img src="/wwr/images/Facebook_Messenger-128.webp" alt="Messenger">
+                    <img src="../wwr/images/Facebook_Messenger-128.webp" alt="Messenger">
                 </a>
                 </div>
                     
