--- a/wwr/contact Us.html
+++ b/wwr/contact Us.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <header>
-        <img src="../wwr/images/logo.png" alt="company logo">
-            <ul>
+        <nav>
+          <img src="../wwr/images/logo.png" alt="company logo">
+            <ul class="list">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="trips.html">Trips</a></li>
@@ -125,7 +126,7 @@
 
                 <div class="form-group checkbox-group">
                     <input type="checkbox" id="newsletter" name="newsletter">
-                    <label for="newsletter">Please subscribe me to the monthly newsletter</label>
+                    <label for="newsletter">Please subscribe me to the monthly Feeds</label>
                 </div>
 
                 <div class="form-group">
@@ -142,18 +143,18 @@
             </div>
             <div class="social-icons">
                 <div class="facebook">
-                    <a href="facebook.com" aria-label="Visit our Facebook page" class="social-icon facebook">
+                    <a href="http//facebook.com" aria-label="Visit our Facebook page" class="social-icon facebook">
                         <img src="../wwr/images/facebook.webp" alt="facebook">
                     </a>
                 </div>
                 <div class="whatsapp">
-                     <a href="whatsApp.com" aria-label="Contact us on WhatsApp" class="social-icon whatsapp">
+                     <a href="http//whatsApp.com" aria-label="Contact us on WhatsApp" class="social-icon whatsapp">
                      <img src="../wwr/images/2504957.png" alt="whatsApp">
                 </a>
                      
                 </div>
                 <div class="messenger">
-                    <a href="messenger.com" aria-label="Message us on Messenger" class="social-icon messenger">
+                    <a href="http//messenger.com" aria-label="Message us on Messenger" class="social-icon messenger">
                     <img src="../wwr/images/Facebook_Messenger-128.webp" alt="Messenger">
                 </a>
                 </div>
