--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -62,7 +62,7 @@
             <h2>Meet Our Team</h2>
             <div class="employee-grid">
                 <figure class="employee">
-                    <img src="../wwr/images/CEO Francis.jpg" alt="Mr, frank">
+                    <img src="../wwr/images/fancis.jpg" alt="Mr, frank">
                     <figcaption>
                         <strong>Mr, Frank</strong><br>
                         Lead Guide & Safety Coordinator<br>
