--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -5,8 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Whitewater Rafting Adventures - Get in Touch Today</title>
     <meta name="description" content="Contact Whitewater Rafting Adventures for reservations, trip questions, and general inquiries. Find our address, phone numbers, email, and send us a message about your next adventure.">
-    <link rel="stylesheet" href="../wwr/styles/conatct.css">
+    <meta name="author" content="Kalungi Isaac">
+
+    <!-- Google Fonts with preconnect -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="../wwr/styles/rafting.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -62,15 +70,15 @@
             <h2>Meet Our Team</h2>
             <div class="employee-grid">
                 <figure class="employee">
-                    <img src="../wwr/images/fancis.jpg" alt="Mr, frank">
+                    <img src="../wwr/images/image60.jpg" alt="Mr, frank">
                     <figcaption>
-                        <strong>Mr, Frank</strong><br>
+                        <strong>Mr,Frank</strong><br>
                         Lead Guide & Safety Coordinator<br>
                         <em>"Safety first, fun always!"</em>
                     </figcaption>
                 </figure>
                 <figure class="employee">
-                    <img src="../wwr/images/kalungi.jpg" alt="Kalungi Isaac, Senior Guide">
+                    <img src="../wwr/images/image61.jpg" alt="Kalungi Isaac, Senior Guide">
                     <figcaption>
                         <strong>Kalungi Isaac</strong><br>
                         Senior Guide & Equipment Manager<br>
