--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Kalungi Isaac">
 
     <title>Kalungi Isaac | WDD130</title>
-    <link rel="stylesheet" href="/wwr/styles/style.css">
+    <link rel="stylesheet" href="../wwr/styles/style.css">
 </head>
 <body>
     <header>
@@ -20,7 +20,7 @@
     
     <main>
         <h1>Kalungi Isaac | WDD130</h1>
-        <img src="/wwr/images/profile.jpg" alt="Profile picture of Kalungi Isaac" width="200" height="220">
+        <img src="../wwr/images/profile.jpg" alt="Profile picture of Kalungi Isaac" width="200" height="220">
         <p>My name is Kalungi Isaac, a student at Brigham Young University Idaho, pursuing a degree in web design. 
             I am passionate about creating innovative web solutions that enhance user experience and drive engagement.
             With a strong foundation in HTML, CSS, and JavaScript, I am eager to apply my skills to real-world projects 
@@ -28,7 +28,7 @@
     </main>  
     <aside>
         <h2>My State: Kampala Uganda</h2>
-        <img src="/wwr/images/happyclient.png" alt="Map of Uganda" width="200">
+        <img src="../wwr/images/happyclient.png" alt="Map of Uganda" width="200">
         <p>My country, Uganda—the Pearl of Africa—is treasured for its natural beauty. 
             Uganda is blessed with fertile land, where the sun can shine while it's raining, enriching the soil.
             The Ugandan people are beautiful and welcoming, inviting everyone to experience the unique charm of our country.</p>
