--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,8 +7,8 @@
     <meta name="description" content="Learn more about Kal White Water Rafting Company, our history, and thrilling rafting adventures.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <title>About Us | Kal White Water Rafting Company.</title>
-    <link rel="stylesheet" href="../wwr/styles/rafting.css">
+    <title>cont Us | Kal White Water Rafting Company.</title>
+    <link rel="stylesheet" href="../wwr/styles/rafting1.css">
 </head>
 <body>
     <header>
