--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -10,8 +10,7 @@
     <!-- Google Fonts with preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-
+    
     <link rel="stylesheet" href="../wwr/styles/rafting.css">
 </head>
 
@@ -163,7 +162,7 @@
                 </div>
                 <div class="messenger">
                     <a href="http//messenger.com" aria-label="Message us on Messenger" class="social-icon messenger">
-                    <img src="../wwr/images/Facebook_Messenger-128.webp" alt="Messenger">
+                    <img src="../wwr/images/facebook3.webp" alt="Messenger">
                 </a>
                 </div>
                      
