--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -6,11 +6,9 @@
     <title>Contact Whitewater Rafting Adventures - Get in Touch Today</title>
     <meta name="description" content="Contact Whitewater Rafting Adventures for reservations, trip questions, and general inquiries. Find our address, phone numbers, email, and send us a message about your next adventure.">
     <meta name="author" content="Kalungi Isaac">
-
-    <!-- Google Fonts with preconnect -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../wwr/styles/rafting.css">
 </head>
 
@@ -47,7 +45,7 @@
                         <h3>Phone Numbers</h3>
                         <p><strong>Reservations:</strong> (+256) 724-654<br>
                         <strong>General Info:</strong> (+256) 766-7898<br>
-                        <strong>Emergency:</strong> (+256)-742-725522</p>
+                        <strong>☎️Emergency:</strong> (+256)-742-725522</p>
                     </div>
                     <div class="contact-item">
                         <h3>✉️ Email</h3>
