--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Kalungi Isaac">
 
     <title>Kalungi Isaac | WDD130</title>
-    <link rel="stylesheet" href="../wwr/styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
     <header>
