--- a/wwr/about.html
+++ b/wwr/about.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <title>cont Us | Kal White Water Rafting Company.</title>
-    <link rel="stylesheet" href="../wwr/styles/rafting1.css">
+    <link rel="stylesheet" href="../styles/rafting1.css">
 </head>
 <body>
     <header>
