--- a/wwr/index.html
+++ b/wwr/index.html
@@ -7,12 +7,12 @@
     <meta name="author" content="Kalungi Isaac">
 
     <title>Kalungi Isaac | WDD130</title>
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/rafting.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="https://github.com/kalungi256256/wdd130">Home</a>
+            <a href="http//kalungi256256.github.io/wdd130/wwr/index.html">Home</a>
             <a href="https://kalungi256256.github.io/wdd130/wwr/about.html">KAL Rafting Site</a>
         </nav>
     </header>
