Implement code changes to enhance functionality and improve performance

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -17,15 +17,15 @@
         <nav>
           <img src="../wwr/images/logo.png" alt="company logo">
             <ul class="list">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="trips.html">Trips</a></li>
-                <li><a href="contact.html" class="active">Contact</a></li>
+                <li><a href="index.html">🏡Home</a></li>
+                <li><a href="about.html">🌐About</a></li>
+                <li><a href="trips.html">🐬Trips</a></li>
+                <li><a href="contact.html" class="active">📞Contact Us</a></li>
             </ul>
         </nav>
     </header>
 
-    <main>
+    <main class="faqs">
         <section class="hero-contact">
             <h1>Contact Us</h1>
             <p>Ready for your next adventure? Get in touch with our team!</p>
@@ -146,7 +146,7 @@
             <div class="footer-left">
                 <p>&copy; 2020 kal Whitewater Rafting Adventures. All rights reserved.</p>   
             </div>
-            <div class="social-icons">
+            <div class="footer-icons">
                 <div class="facebook">
                     <a href="http//facebook.com" aria-label="Visit our Facebook page" class="social-icon facebook">
                         <img src="../wwr/images/facebook.webp" alt="facebook">
