--- a/wwr/index.html
+++ b/wwr/index.html
@@ -13,9 +13,10 @@
     <header class="again">
         <nav>
              <ul class="list">
-                <a href="http//kalungi256256.github.io/wdd130/wwr/index.html">🏡Home</a>
-                <a href="http//kalungi256256.github.io/wdd130/wwr/about.html">🌐About</a>
-                <a href="https://kalungi256256.github.io/wdd130/wwr/about.html">🌊Rafting Site</a>
+                <li><a href="index.html">🏡Home</a></li>
+                <li><a href="about.html">🌐About</a></li>
+                <li><a href="trips.html" class="active">🐬Trips</a></li>
+                <li><a href="contact.html">📞Contact Us</a></li>
             </ul>
         </nav>
     </header>
@@ -25,17 +26,17 @@
         <div class="employee">
             <img src="../wwr/images/profile.jpg" alt="Profile picture of Kalungi Isaac" width="200" height="220">
         </div>
-        <p>My name is Kalungi Isaac, a student at Brigham Young University Idaho, pursuing a degree in web design. 
+        <p class="v">My name is Kalungi Isaac, a student at Brigham Young University Idaho, pursuing a degree in web design. 
             I am passionate about creating innovative web solutions that enhance user experience and drive engagement.
             With a strong foundation in HTML, CSS, and JavaScript, I am eager to apply my skills to real-world projects 
             and contribute to the ever-evolving field of web development.</p>
     </main>  
     <aside>
         <h2 class="h2">My State: Kampala Uganda</h2>
-        <div class="employee">
-            <img src="../wwr/images/kampala.png" alt="Map of Uganda" width="400">
+        <div class="boot">
+            <img src="/wwr/images/kampalacity.jpg" alt="kampal city night" width="400">
         </div>
-        <p>My country, Uganda—the Pearl of Africa—is treasured for its natural beauty. 
+        <p class="v">My country,<strong>Uganda—the Pearl of Africa</strong>—is treasured for its natural beauty. 
             Uganda is blessed with fertile land, where the sun can shine while it's raining, enriching the soil.
             The Ugandan people are beautiful and welcoming, inviting everyone to experience the unique charm of our country.</p>
     </aside> 
